# libvdpau-sunxi

./: CMakeLists.txt
